[gd_scene load_steps=12 format=2]

[ext_resource path="res://Game/Leaderboard.gd" type="Script" id=1]
[ext_resource path="res://Fonts/MinimalUI.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://SFX/buttonClick.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 54
font_data = ExtResource( 3 )

[node name="Leaderboard" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1022.0
margin_bottom = 595.0
color = Color( 0.12549, 0.14902, 0.164706, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 231.0
margin_top = 42.0
margin_right = 793.0
margin_bottom = 557.0
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 562.0
margin_bottom = 110.0
rect_min_size = Vector2( 300, 100 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Leaderboard"
align = 1
valign = 1
uppercase = true

[node name="White_Space" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 562.0
margin_bottom = 120.0

[node name="top1" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 562.0
margin_bottom = 199.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "1º Melhor tempo: "
align = 1

[node name="top2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 209.0
margin_right = 562.0
margin_bottom = 278.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
text = "2º Melhor tempo: "
align = 1

[node name="top3" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 562.0
margin_bottom = 357.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 5 )
text = "3º Melhor tempo: "
align = 1

[node name="top4" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 367.0
margin_right = 562.0
margin_bottom = 436.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 6 )
text = "4º Melhor tempo: "
align = 1

[node name="top5" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 446.0
margin_right = 562.0
margin_bottom = 515.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 7 )
text = "5º Melhor tempo: "
align = 1

[node name="Button" type="Button" parent="."]
margin_left = 11.0
margin_top = 509.0
margin_right = 165.0
margin_bottom = 585.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Back"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
